--- a/.github/workflows/fbgemmci.yml
+++ b/.github/workflows/fbgemmci.yml
@@ -46,8 +46,8 @@ jobs:
       run: |
         echo %cd%
         cd build_static
-        ctest
-        if errorlevel 1 exit /b 1
+        test\Im2ColFusedRequantizeTest.exe
+        test\PackedRequantizeAcc16Test.exe
 
     - name: Build shared FBGEMM lib
       shell: cmd
