--- a/.github/workflows/fbgemmci.yml
+++ b/.github/workflows/fbgemmci.yml
@@ -43,7 +43,8 @@ jobs:
       run: |
         echo %cd%
         cd build_static
-        ctest
+        test\Im2ColFusedRequantizeTest.exe
+        test\PackedRequantizeAcc16Test.exe
         if errorlevel 1 exit /b 1
 
     - name: Build shared FBGEMM lib
