--- a/.github/workflows/fbgemmci.yml
+++ b/.github/workflows/fbgemmci.yml
@@ -44,6 +44,7 @@ jobs:
         echo %cd%
         cd build_static
         test\Im2ColFusedRequantizeTest.exe
+        test\PackedRequantizeAcc16Test.exe
         if errorlevel 1 exit /b 1
 
 
